# piston

./: .gitignore  CMakeLists.txt  piston.code-workspace
cli/: CMakeLists.txt
cli/include/: operations.h
cli/src/: main.cpp  operations.cpp
kernel/: CMakeLists.txt
kernel/driver/: CMakeLists.txt
kernel/driver/src/: entry.cpp  entry.h
kernel/driver/src/core/: log.h
kernel/driver/src/process/: callbacks.cpp  callbacks.h
payloads/: CMakeLists.txt
payloads/ex1/: CMakeLists.txt  ex1.cpp
payloads/ex2/: CMakeLists.txt  ex2.cpp
tests/: CMakeLists.txt
tests/process/memory/: scanner_test.cpp
user/: CMakeLists.txt
user/cli/: CMakeLists.txt
user/cli/include/: operations.h
user/cli/src/: main.cpp  operations.cpp
user/payloads/: CMakeLists.txt
user/payloads/ex1/: CMakeLists.txt  ex1.cpp
user/payloads/ex2/: CMakeLists.txt  ex2.cpp
user/payloads/homeworld/: CMakeLists.txt  homeworld.cpp
user/payloads/scout/: CMakeLists.txt  scout.cpp
user/tests/: CMakeLists.txt
user/tests/core/: byte_stream_test.cpp  strings_test.cpp
user/tests/ipc/messages/: write_request_test.cpp
user/tests/process/memory/: region_test.cpp  scanner_test.cpp
